--- a/client/src/layouts/site/footer/index.scss
+++ b/client/src/layouts/site/footer/index.scss
@@ -6,6 +6,10 @@
     .top {
       display: flex;
       justify-content: space-between;
+      @media only screen and (max-width: 768px) {
+        flex-direction: column;
+        row-gap: 50px;
+       }
       .logo {
         img {
           margin-bottom: 20px;
@@ -22,7 +26,14 @@
       nav {
         display: flex;
         column-gap: 140px;
+        @media only screen and (max-width: 768px) {
+          flex-direction: column;
+          row-gap: 50px;
+         }
         ul {
+          @media only screen and (max-width: 768px) {
+           margin-left: 30px;
+           }
           h4 {
             font-size: 18px;
             letter-spacing: 1px;
