--- a/client/src/pages/site/doctors-team/index.scss
+++ b/client/src/pages/site/doctors-team/index.scss
@@ -65,12 +65,17 @@
       justify-content: space-between;
       align-items: center;
       margin-top: 50px;
-      @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 990px) {
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         row-gap: 30px;
       }
       input {
         width: 500px;
+        @media only screen and (max-width: 990px) {
+          width: 300px;
+        }
       }
       .sort {
         text-align: center;
@@ -102,14 +107,17 @@
     .cards {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
       gap: 20px;
-      width: 100%;
+      // width: 100%;
       margin-top: 60px;
       .card {
-        width: 49%;
+        // width: 49%;
         box-shadow: 0 0 2px 0px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
         display: flex;
+        justify-content: center;
+        align-items: center;
         .image {
           overflow: hidden;
           display: flex;
@@ -117,6 +125,7 @@
           width: 50%;
           padding: 10px;
           position: relative;
+          width: 321px;
           .icon {
             position: absolute;
             right: 10px;
