--- a/client/src/pages/site/faqs/index.scss
+++ b/client/src/pages/site/faqs/index.scss
@@ -103,10 +103,11 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      flex-wrap: wrap;
-      width: 100%;
+      @media only screen and (max-width: 990px) {
+        flex-direction: column;
+        row-gap: 50px;
+      }
       .card {
-        width: 32.6%;
         border-radius: 8px;
         .img {
           display: flex;
@@ -187,6 +188,12 @@
           }
           .ant-collapse-item {
             width: 800px;
+            @media only screen and (max-width: 990px) {
+              width: 660px;
+            }
+            @media only screen and (max-width: 768px) {
+              width: 500px;
+            }
             background-color: #f8f9fa;
             border-radius: 5px !important;
             border: 1px solid #e9ecef;
