--- a/client/src/pages/site/wishlist/index.scss
+++ b/client/src/pages/site/wishlist/index.scss
@@ -64,6 +64,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
+      justify-content: center;
       gap: 20px;
       width: 100%;
       margin-top: 60px;
