--- a/client/src/pages/patient-profile/index.scss
+++ b/client/src/pages/patient-profile/index.scss
@@ -68,20 +68,24 @@
   }
   #patient-profile {
     padding: 80px 0;
+    display: flex;
+    justify-content: center;
     .patient {
-      display: flex;
-      column-gap: 80px;
-      align-items: center;
-      width: 100%;
+      border: 1px solid #eeecec;
+      width: 500px;
       .img {
-        width: 50%;
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
         img {
-          border-radius: 10px;
-          width: 300px;
+          border-radius: 50%;
+          width: 200px;
         }
       }
       .about-patient {
-        width: 50%;
+        padding: 25px;
+        display: flex;
+        justify-content: center;
         .about {
           width: 100%;
           display: flex;
@@ -93,15 +97,16 @@
             font-size: 28px;
             line-height: 1.5;
             font-weight: 600;
+            text-align: center;
           }
           span {
-            width: 35%;
+            width: 120px;
             font-weight: 700;
             color: #212529;
             letter-spacing: 0.5px;
           }
           p {
-            width: 65%;
+            width: 160px;
             color: #8492a6;
             letter-spacing: 0.5px;
             font-weight: 600;
@@ -110,13 +115,12 @@
         .btn {
           display: flex;
           align-items: center;
+          justify-content: center;
           column-gap: 30px;
           margin-top: 30px;
-          // width: 100%;
           button {
             padding: 10px 20px;
             outline: 0;
-            // width: 50%;
             cursor: pointer;
             font-size: 15px;
             letter-spacing: 0.5px;
