--- a/client/src/pages/site/doctors-team/index.scss
+++ b/client/src/pages/site/doctors-team/index.scss
@@ -101,7 +101,7 @@
         }
       }
     }
-    .spinner{
+    .spinner {
       margin-top: 80px;
     }
     .cards {
@@ -150,7 +150,12 @@
             }
             &:hover {
               background-color: #f0735a;
-              color: #fff;
+              .fa-solid {
+                color: #fff;
+              }
+              .fa-regular {
+                color: #fff;
+              }
             }
           }
           img {
